add test User model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/channels
+spring.datasource.username=postgres
+spring.datasource.password=JSG!post2425
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
