--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/SlackProjet
+spring.datasource.username=postgres
+spring.datasource.password=G-papa30
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 
