--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/SlackProjet
 spring.datasource.username=postgres
-<<<<<<< HEAD
-spring.datasource.password=210976
-spring.jpa.hibernate.ddl-auto=validate
-=======
+spring.datasource.password=JSG!post2425
 
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
->>>>>>> f854cc61e39bb9f180b907b4ae7181a3f91c3cd3
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
