composant channel getAllChannel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/SlackProjet
 spring.datasource.username=postgres
-spring.datasource.password=JSG!post2425
+spring.datasource.password=G-papa30
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
